contact and portfolio page complete with content but not fully functional btns

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,9 +1,101 @@
-#burger {
-  color: white;
-  border-color: rgb(170, 185, 199);
-  background-color: transparent;
+.navbar {
+  padding: 1rem, 2rem;
 }
 
+.burger {
+  border-color: rgb(170, 185, 199);
+}
+
+body {
+  font-family: "Lora", serif;
+}
+
+.btn-sm {
+  border-radius: 24px;
+}
+.btn-lg {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.greet {
+  font-family: courier new;
+}
+.greet.end {
+  text-align: right;
+  margin-right: 5vh;
+}
+
+.jumbotron {
+  padding: 2rem;
+}
+
+p {
+  /* text-indent: 4rem; */
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-weight: bold;
+  font-size: 28px;
+  background-color: white;
+  box-shadow: 0 35px 47px rgba(0, 0, 0, 0.2);
+
+  padding: 2%;
+}
+
+p a {
+  text-align: left;
+  display: inline-block;
+  background-color: yellow;
+}
+
+.git-link {
+  display: flex;
+  justify-content: center;
+  /* padding-top: 1vh; */
+}
+
+.upcontain {
+  /* background-color: white; */
+  padding-right: 8%;
+  padding-left: 8%;
+  max-width: 150rem;
+  min-width: 30rem;
+  line-height: 2;
+}
+.undercontainer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 1vh;
+  padding-right: 14%;
+  padding-left: 14%;
+  max-width: 80rem;
+
+  min-width: 5rem;
+}
+h6 {
+  line-height: 2;
+  font-size: 1.5em;
+  font-weight: normal;
+  background-color: white;
+  padding: 2%;
+  box-shadow: 0 30px 40px rgba(0, 0, 0, 0.1);
+}
+
+.logos-container {
+  padding: 2vh;
+}
+
+.flex-gap {
+  display: flex;
+  justify-content: space-evenly;
+
+  flex-wrap: wrap;
+}
+.flex-gap > figure {
+  margin: 6px;
+}
 img {
   max-height: 280px;
   max-width: 490px;
@@ -12,20 +104,17 @@ img {
 figcaption {
   text-align: center;
   margin-top: 1vh;
+  z-index: 5000;
 }
 
-.row {
+.popover-btn {
+  text-align: center;
+  margin-top: 1vh;
+}
+
+.opencard {
+  max-width: 20vh;
   display: flex;
-  justify-content: space-evenly;
-  align-items: stretch;
-  margin-top: 4vh;
-  margin-bottom: 4vh;
+  justify-content: center;
+  text-align: center;
 }
-
-/* .top-margin {
-  margin-top: 3rem;
-}
-
-.contact-icon {
-  max-width: 3rem;
-} */
