--- a/Assets/contact.css
+++ b/Assets/contact.css
@@ -1,29 +1,33 @@
 .navbar {
   padding: 1rem, 2rem;
 }
+.page {
+  height: 100vh;
+}
+.row {
+  height: 100%;
+}
 .contact {
   display: flex;
   justify-content: center;
   justify-content: space-evenly;
+  align-items: center;
   background: url("./img/email.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .card-body {
-  /* min-width: 35vh; */
   margin: 0 auto;
   padding-right: 2%;
   padding-left: 2%;
-  /* display: flex; */
-  /* justify-content: center; */
 }
 
 #con-card {
   margin: 0 auto;
   background-color: rgb(236, 236, 236);
-  max-width: 60%;
-  border-radius: 20px;
+  max-width: 70%;
+  min-height: 35em;
 }
 
 #con-icon {
@@ -37,9 +41,6 @@
 
 .col-6 {
   padding: 0px;
-  /* padding: none; */
-  /* display: flex;
-  justify-content: stretch; */
 }
 
 .card-title {
@@ -47,16 +48,3 @@
   font-size: 2rem;
   margin-bottom: 0px;
 }
-/* 
-textarea {
-  width: 600px;
-  height: 300px;
-} */
-
-/* .top-margin {
-  margin-top: 3rem;
-}
-
-.contact-icon {
-  max-width: 3rem;
-} */
